Fixed width of layouts with left panel only Fixed overflowing text

--- a/plugins/knowledge-styles/src/scss/components/_searchResults.scss
+++ b/plugins/knowledge-styles/src/scss/components/_searchResults.scss
@@ -141,6 +141,7 @@ $searchResult_breakPoint                      : 800px;
 
 
 ._searchResult-excerpt {
+  @include breakWord;
   margin-bottom: $utility-baseUnit;
   color: $searchResult-excerpt_color;
 }
