--- a/plugins/knowledge-styles/src/scss/layouts/_panelAndNav.scss
+++ b/plugins/knowledge-styles/src/scss/layouts/_panelAndNav.scss
@@ -21,6 +21,13 @@ $panelAndNav-leftPanel_bg                            : $panelAndNav_bg;
 ._panelAndNav {
   display: flex;
   flex-wrap: wrap;
+
+  &._noRightColumn {
+    ._panelAndNav-middle {
+      flex-basis: 100%;
+      max-width: 100%;
+    }
+  }
 }
 
 
@@ -31,8 +38,6 @@ $panelAndNav-leftPanel_bg                            : $panelAndNav_bg;
   flex-basis: $global-panel_width;
   z-index: 2;
   background-color: $panelAndNav-rightPanel_bg;
-
-
 
   padding: {
     top: $widget-top_padding;
